test/expected/declare_mo_arrow_i.out
struct S; declare -> as member operator returning int
                                         ^
42: error: operator -> must return a pointer to struct, union, or class
